--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,9 +27,9 @@
 <div class="sidebar-overlay"></div>
 <aside class="sidebar w-64 p-6 flex flex-col justify-between fixed lg:relative h-full">
     <div>
-        <div class="flex items-center mb-10">
-            <span class="material-icons text-3xl text-blue-500 mr-2">layers</span>
-            <h1 class="text-2xl font-bold text-white">LEXFLOW</h1>
+        <div class="flex items-center mb-10 space-x-2">
+            <img src="/images/justjavaLogo.svg" class="w-8 h-8">
+            <h1 class="text-2xl font-bold text-white mt-1">JustJava</h1>
         </div>
         <nav class="space-y-4">
             <a class="flex items-center px-4 py-3 bg-blue-600 text-white rounded-lg" th:href="@{/dashboard}" >
