--- a/src/main/resources/templates/process/processInstance.html
+++ b/src/main/resources/templates/process/processInstance.html
@@ -3,6 +3,7 @@
       layout:decorate="~{layout}">
 <head>
   <title>Past Processes</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .timeline-circle {
       width: 16px;
